Fixing README example and shifting position of alert 1 px right

--- a/index.scss
+++ b/index.scss
@@ -20,7 +20,7 @@
   position: absolute;
   padding-top: 11px;
   top: 0;
-  left: -4px;
+  left: -3px;
   width: 60px;
   min-height: 100%;
   text-align: center;
